# BF2MC-Extractor

./: .gitignore  .mkisofsrc  analise.py  config.py  export.py  import.py  readme.md
battlefield/: files.py
docs/swizzling/: reference.txt
example/: Medkit_weapon.txt  analise.txt
example/block_inspector/: CMakeLists.txt  data.txt  log.txt  sux.py  sux2.py  sux3.py
example/block_inspector/lib/: PS2Textures.py
example/block_inspector/src/: PS2Textures.cpp  PS2Textures.h  main.cpp
example/cat/: cat.py
example/dice/: Serialize.py
example/gamespy_sux/: analise.txt  command.txt  powered_by_gamespy.sux
example/gamespy_sux2/: analise.txt  commands.txt  gamespy_1024x512.sux  gamespy_1024x512.tga  gamespy_1024x8.sux  gamespy_1024x8.tga  gamespy_128x8.sux  gamespy_128x8.tga  gamespy_16x8.sux  gamespy_16x8.tga  gamespy_256x128.sux  gamespy_256x128.tga  gamespy_256x8.sux  gamespy_256x8.tga  gamespy_32x16.sux  gamespy_32x16.tga  gamespy_32x8.sux  gamespy_32x8.tga  gamespy_512x256.sux  gamespy_512x256.tga  gamespy_512x8.sux  gamespy_512x8.tga  gamespy_64x32.sux  gamespy_64x32.tga  gamespy_64x8.sux  gamespy_64x8.tga
example/gamespy_sux3/: analise.txt  gamespy_128x64.tga  gamespy_128x64_32.sux  gamespy_128x64_4.sux
example/gltf/: scene.gltf  scene.py  triangle_model.gltf  triangle_model.py
example/level_txt/: LevelTxt.py
example/lnd/: Land.py  MeshTerrain.py
example/sgf/: StaticModel.py
example/static_geometry/: StaticGeometry.py
lib/: PS2Textures.py  ark.py  cat.py  cat_resource.py  functions.py  level_txt.py  lnd.py  sgf.py  sux.py  viv.py  xma.py
(+70 files in other folders)
